--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Feb 01 2022 20:43:29 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Feb 01 2022 22:13:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61f67422fd0412003fe974c2" data-wf-site="61f67422fd0412b919e974c1">
 <head>
   <meta charset="utf-8">
@@ -53,9 +53,9 @@
     <div class="container">
       <div class="about-content">
         <h1 data-w-id="0dc2a61f-618a-bc06-1939-3539f0e7bc0a" style="opacity:0" class="about-title">who we <span class="outlined-text">are?</span></h1>
-        <div class="about-image-1"><img src="images/about-image-1-min.jpg" loading="lazy" width="397" sizes="(max-width: 479px) 44vw, (max-width: 991px) 45vw, 397px" srcset="images/about-image-1-min.jpg 500w, images/about-image-1-min.jpg 794w" alt=""></div>
+        <div class="about-image-1"><img src="images/about-image-1-min.jpg" loading="lazy" width="397" sizes="(max-width: 479px) 300px, (max-width: 767px) 43vw, (max-width: 991px) 45vw, 397px" srcset="images/about-image-1-min.jpg 500w, images/about-image-1-min.jpg 794w" alt="" class="image"></div>
         <div data-w-id="cdc4e541-8781-01ea-134d-667725f55957" style="opacity:0" class="about-video-icon"><img src="images/play.svg" loading="lazy" alt=""></div>
-        <div class="about-image-2"><img src="images/about-image-2-min.jpg" loading="lazy" width="397" sizes="(max-width: 479px) 44vw, (max-width: 991px) 45vw, 397px" srcset="images/about-image-2-min.jpg 500w, images/about-image-2-min.jpg 794w" alt=""></div>
+        <div class="about-image-2"><img src="images/about-image-2-min.jpg" loading="lazy" width="397" sizes="(max-width: 479px) 300px, (max-width: 767px) 43vw, (max-width: 991px) 45vw, 397px" srcset="images/about-image-2-min.jpg 500w, images/about-image-2-min.jpg 794w" alt=""></div>
       </div>
     </div>
   </div>
@@ -64,15 +64,15 @@
       <h1 data-w-id="008b49f2-79cf-073b-f4d2-479c33a5173d" style="opacity:0" class="projects-title">recent projects</h1>
       <div data-w-id="6dd930ac-0918-1990-9bad-95d5cc499037" style="opacity:0" class="projets-items">
         <div class="projects-item">
-          <div class="project-image"><img src="images/project-image-1.jpg" loading="lazy" width="400" sizes="(max-width: 479px) 28vw, (max-width: 767px) 29vw, 30vw" srcset="images/project-image-1.jpg 500w, images/project-image-1.jpg 800w" alt=""></div>
+          <div class="project-image"><img src="images/project-image-1.jpg" loading="lazy" width="400" sizes="(max-width: 479px) 31vw, (max-width: 767px) 29vw, 30vw" srcset="images/project-image-1.jpg 500w, images/project-image-1.jpg 800w" alt=""></div>
           <h1 class="project-title">Upstox</h1>
         </div>
         <div class="projects-item">
-          <div class="project-image"><img src="images/project-image-1-min-1.jpg" loading="lazy" width="400" sizes="(max-width: 479px) 28vw, (max-width: 767px) 29vw, 30vw" srcset="images/project-image-1-min-1.jpg 500w, images/project-image-1-min-1.jpg 800w" alt=""></div>
+          <div class="project-image"><img src="images/project-image-1-min-1.jpg" loading="lazy" width="400" sizes="(max-width: 479px) 31vw, (max-width: 767px) 29vw, 30vw" srcset="images/project-image-1-min-1.jpg 500w, images/project-image-1-min-1.jpg 800w" alt=""></div>
           <h1 class="project-title">Manifest Climate</h1>
         </div>
         <div class="projects-item">
-          <div class="project-image"><img src="images/project-image-3-min.jpg" loading="lazy" width="400" sizes="(max-width: 479px) 28vw, (max-width: 767px) 29vw, 30vw" srcset="images/project-image-3-min.jpg 500w, images/project-image-3-min.jpg 800w" alt=""></div>
+          <div class="project-image"><img src="images/project-image-3-min.jpg" loading="lazy" width="400" sizes="(max-width: 479px) 31vw, (max-width: 767px) 29vw, 30vw" srcset="images/project-image-3-min.jpg 500w, images/project-image-3-min.jpg 800w" alt=""></div>
           <h1 class="project-title">lululemon</h1>
         </div>
       </div>
@@ -189,7 +189,7 @@
   <div id="partners" class="sponsor wf-section">
     <div class="container">
       <div class="sponsor-content">
-        <div data-w-id="ad9de326-dbd7-3e4c-427e-89a576581874" style="opacity:0" class="sponsor-image"><img src="images/team-image-min.jpg" loading="lazy" sizes="(max-width: 479px) 169px, (max-width: 767px) 52vw, 400px" srcset="images/team-image-min.jpg 500w, images/team-image-min.jpg 800w" alt=""></div>
+        <div data-w-id="ad9de326-dbd7-3e4c-427e-89a576581874" style="opacity:0" class="sponsor-image"><img src="images/team-image-min.jpg" loading="lazy" sizes="(max-width: 479px) 300px, (max-width: 767px) 41vw, (max-width: 991px) 300px, 400px" srcset="images/team-image-min.jpg 500w, images/team-image-min.jpg 800w" alt=""></div>
         <div data-w-id="bf49f0c7-18e8-1234-a26e-0466ba9398c3" style="opacity:0" class="sponsor-info">
           <p class="sponsor-description">we worked with the  world’s biggest brands and the most innovated startups.</p>
           <div class="sponsor-brands">
